--- a/to-do/src/App.css
+++ b/to-do/src/App.css
@@ -2,12 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -30,4 +24,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+.to-do-item{
+  border: 1px solid black;
+  border-radius: 8px;
+  width: 40%;
+  margin: 2%;
+  padding: 1%;
 }
